# core/src/main/java/nu/yona/server/subscriptions/service/UserDto.java
@@ -59,10 +59,10 @@ public class UserDto
 						namedMessageSourceId, anonymousMessageSourceId, goals, buddies, userAnonymizedId, devices));
 	}
 
-	private UserDto(UUID id, LocalDateTime creationTime, Optional<LocalDate> appLastOpenedDate, String mobileNumber,
-			boolean isConfirmed, boolean isCreatedOnBuddyRequest)
+	private UserDto(UUID id, Optional<LocalDate> appLastOpenedDate, String mobileNumber, boolean isConfirmed,
+			boolean isCreatedOnBuddyRequest)
 	{
-		this(id, Optional.of(creationTime), appLastOpenedDate, null, mobileNumber, isConfirmed, isCreatedOnBuddyRequest, null);
+		this(id, Optional.empty(), appLastOpenedDate, null, mobileNumber, isConfirmed, isCreatedOnBuddyRequest, null);
 	}
 
 	@JsonCreator
@@ -185,8 +185,8 @@ public class UserDto
 	{
 		Objects.requireNonNull(userEntity, "userEntity cannot be null");
 
-		return new UserDto(userEntity.getId(), userEntity.getCreationTime(), userEntity.getAppLastOpenedDate(),
-				userEntity.getMobileNumber(), userEntity.isMobileNumberConfirmed(), userEntity.isCreatedOnBuddyRequest());
+		return new UserDto(userEntity.getId(), userEntity.getAppLastOpenedDate(), userEntity.getMobileNumber(),
+				userEntity.isMobileNumberConfirmed(), userEntity.isCreatedOnBuddyRequest());
 	}
 
 	public static UserDto createInstance(User userEntity, Set<BuddyDto> buddies)
@@ -203,7 +203,7 @@ public class UserDto
 
 	public static UserDto createInstance(User userEntity, BuddyUserPrivateDataDto buddyData)
 	{
-		return new UserDto(userEntity.getId(), Optional.of(userEntity.getCreationTime()), userEntity.getAppLastOpenedDate(), null,
+		return new UserDto(userEntity.getId(), Optional.empty(), userEntity.getAppLastOpenedDate(), null,
 				userEntity.getMobileNumber(), userEntity.isMobileNumberConfirmed(), userEntity.isCreatedOnBuddyRequest(),
 				buddyData);
 	}
